@@ -26,6 +26,8 @@
 #include "perfetto/ext/tracing/core/trace_packet.h"
 #include "perfetto/ext/tracing/core/trace_writer.h"
 #include "perfetto/tracing/core/data_source_config.h"
+#include "src/ipc/client_impl.h"
+#include "src/tracing/ipc/producer/producer_ipc_client_impl.h"
 
 #include "protos/perfetto/config/test_config.gen.h"
 #include "protos/perfetto/trace/test_event.pbzero.h"
@@ -157,6 +159,15 @@ void FakeProducer::Flush(FlushRequestID flush_request_id,
   if (trace_writer_)
     trace_writer_->Flush();
   endpoint_->NotifyFlushComplete(flush_request_id);
+}
+
+int FakeProducer::unix_socket_fd() {
+  // Since FakeProducer is only used in tests we can include and assume the
+  // implementation.
+  auto* producer = static_cast<ProducerIPCClientImpl*>(endpoint_.get());
+  auto* ipc_client =
+      static_cast<ipc::ClientImpl*>(producer->GetClientForTesting());
+  return ipc_client->GetUnixSocketForTesting()->fd();
 }
 
 void FakeProducer::SetupFromConfig(const protos::gen::TestConfig& config) {
