@@ -56,6 +56,7 @@ void TestHelper::OnDisconnect() {
 
 void TestHelper::OnTracingDisabled(const std::string& /*error*/) {
   std::move(on_stop_tracing_callback_)();
+  on_stop_tracing_callback_ = nullptr;
 }
 
 void TestHelper::OnTraceData(std::vector<TracePacket> packets, bool has_more) {
@@ -141,8 +142,10 @@ void TestHelper::ProduceStartupEventBatch(
 
 void TestHelper::StartTracing(const TraceConfig& config,
                               base::ScopedFile file) {
+  PERFETTO_CHECK(!on_stop_tracing_callback_);
   trace_.clear();
-  on_stop_tracing_callback_ = CreateCheckpoint("stop.tracing");
+  on_stop_tracing_callback_ =
+      CreateCheckpoint("stop.tracing" + std::to_string(++trace_count_));
   endpoint_->EnableTracing(config, std::move(file));
 }
 
@@ -164,6 +167,10 @@ void TestHelper::ReadData(uint32_t read_count) {
   endpoint_->ReadBuffers();
 }
 
+void TestHelper::FreeBuffers() {
+  endpoint_->FreeBuffers();
+}
+
 void TestHelper::WaitForConsumerConnect() {
   RunUntilCheckpoint("consumer.connected." + std::to_string(cur_consumer_num_));
 }
@@ -177,7 +184,8 @@ void TestHelper::WaitForProducerEnabled() {
 }
 
 void TestHelper::WaitForTracingDisabled(uint32_t timeout_ms) {
-  RunUntilCheckpoint("stop.tracing", timeout_ms);
+  RunUntilCheckpoint(std::string("stop.tracing") + std::to_string(trace_count_),
+                     timeout_ms);
 }
 
 void TestHelper::WaitForReadData(uint32_t read_count, uint32_t timeout_ms) {
